--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,6 @@ packages = [{include = "quadratic_solver", from = "src"}]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+quad = "quadratic_solver.__main__:main"
