fix: change dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,20 @@
-[project]
+[tool.poetry]
 name = "quadratic-solver"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "StefBianchet",email = "stefano.bianchet@heig-vd.ch"}
-]
+authors = ["StefBianchet <stefano.bianchet@heig-vd.ch>"]
 readme = "README.md"
-requires-python = ">=3.10"
-dependencies = [
-]
+packages = [{ include = "quadratic_solver", from = "src" }]
 
-[tool.poetry]
-packages = [{include = "quadratic_solver", from = "src"}]
+[tool.poetry.dependencies]
+python = "^3.10"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0"
+
+[tool.poetry.scripts]
+quad = "quadratic_solver.__main__:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-quad = "quadratic_solver.__main__:main"
